little bit a styling plus fixed message alignments

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,16 @@ body {
     background: url('../assets/tweed.png') repeat;
 }
 
+.main {
+    margin-top: 50px;
+    background-color: rgba(91, 192, 222, 0.8);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 @mixin border-radius($radius) {
   -webkit-border-radius: $radius;
      -moz-border-radius: $radius;
@@ -14,7 +24,7 @@ body {
     border: 1px solid darken(white, 20%);
     margin: 20px;
     padding: 20px;
-    background-color: white;
+    background-color: #f8f8f8;
    @include border-radius(10px);
 }
 
